--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8" />
     <title>Warp Randomizer Tracker</title>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="map.js"></script>
     <script src="main.js"></script>
 </head>
 <body>
