--- a/index.html
+++ b/index.html
@@ -4,11 +4,16 @@
 <head>
     <meta charset="utf-8" />
     <title>Warp Randomizer Tracker</title>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
     <script src="map.js"></script>
     <script src="main.js"></script>
+    <link rel="stylesheet" href="main.css" type="text/css" /> 
 </head>
 <body>
-    Test
+    <div>
+        <div id="hubSelector"></div>
+        <div id="currentHub"></div>
+        <div id="currentHubImage"></div>
+    </div>
 </body>
 </html>
