--- a/index.html
+++ b/index.html
@@ -13,17 +13,28 @@
     <div style="display:flex">
         <div style="display:flex; flex-direction:column">
             <div id="hubSelector"></div>
+            <div id="currentHubImage"></div>
+        </div>
+        <div style="border: 1px solid black; height:70vh; margin-left: 20px;">
+            <div id="currentHub"></div>
             <div id="currentDetails">
                 <h2>Selected Entrance:    <span id="currentEntrance"></span></h2>
                 <br />
                 <h2>Selected Destination: <span id="currentDestination"></span></h2>
                 <br />
                 <br />
-                <div style="margin: 0 auto"><button id="clearButton">Clear Selections</button></div>
+                <div style="text-align: center"><button id="clearButton">Clear Selections</button></div>
+                <br /><br />
+                <div id="blockageContainer" style="margin: 0 auto; display: table;">
+                    <h3 style="text-align:center; margin-bottom:0.5em;">Blocked By</h3>
+                </div>
+                <div id="resetButtons">
+                    <button id="resetHub" style="float:left">Reset Hub</button>
+                    <button id="resetAll" style="float:right; background-color:indianred">Reset All</button>
+                </div>
             </div>
         </div>
-        <div id="currentHub"></div>
-        <div id="currentHubImage"></div>
+        
     </div>
     
 
