Add grid and blockage dblclick

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <div id="hubSelector"></div>
             <div id="currentHubImage"></div>
         </div>
-        <div style="border: 1px solid black; height:70vh; margin-left: 20px;">
+        <div id="currentContainer">
             <div id="currentHub"></div>
             <div id="currentDetails">
                 <h2>Selected Entrance:    <span id="currentEntrance"></span></h2>
@@ -34,7 +34,7 @@
                 </div>
             </div>
         </div>
-        
+        <div id="gridContainer"></div>
     </div>
     
 
