Recomment import helper

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
     <script src="map.js"></script>
     <script src="main.js"></script>
-    <script src="import/import.js"></script>
+    <!--<script src="import/import.js"></script>-->
     <link rel="stylesheet" href="main.css" type="text/css" /> 
 </head>
 <body>
