--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8" />
     <title>Warp Randomizer Tracker</title>
     <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
+    <script src="https://code.jquery.com/ui/1.13.1/jquery-ui.js"></script>
     <script src="map.js"></script>
     <script src="main.js"></script>
     <!--<script src="import/import.js"></script>-->
