--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <div id="gridContainer"></div>
 
         <div id="regionSelect" style="padding-left: 20px">
-            <button id="hoennSelect" disabled>Emerald</button>
+            <button id="hoennSelect">Emerald</button>
             <button id="sinnohSelect">Platinum</button>
             <button id="johtoSelect">HG/SS</button>
             <br />
