--- a/index.html
+++ b/index.html
@@ -13,37 +13,38 @@
 </head>
 <body>
     <div style="display:flex">
-        <div style="display:flex; flex-direction:column">
-            <div id="hubSelector"></div>
-            <div id="currentHubImage"></div>
-        </div>
-        <div id="currentContainer">
-            <div id="currentHub"></div>
-            <div id="currentDetails">
-                <h2>Selected Entrance:    <span id="currentEntrance"></span></h2>
-                <br />
-                <h2>Selected Destination: <span id="currentDestination"></span></h2>
-                <br />
-                <br />
-                <div style="text-align: center"><button id="clearButton">Clear Selections</button></div>
-                <br /><br />
-                <div id="blockageContainer" style="margin: 0 auto; display: table;">
-                    <h3 style="text-align:center; margin-bottom:0.5em;">Blocked By</h3>
-                    <div id="blockages"></div>
-                     <p>Add note to this link: <input type="text" id="linkCustomNote"/></p>
-                </div>
-               
-                <div id="resetButtons">
-                    <button id="resetHub" style="float:left">Reset Hub</button>
-                    <button id="resetAll" style="float:right; background-color:indianred">Reset All</button>
-                </div>
-                <div id="notesContainer">
-                    <textarea id="customNotes"></textarea>
+        <div id="content" hidden>
+            <div id="hubContainer" style="display:flex; flex-direction:column">
+                <div id="hubSelector"></div>
+                <div id="currentHubImage"></div>
+            </div>
+            <div id="currentContainer">
+                <div id="currentHub"></div>
+                <div id="currentDetails">
+                    <h2>Selected Entrance:    <span id="currentEntrance"></span></h2>
+                    <br />
+                    <h2>Selected Destination: <span id="currentDestination"></span></h2>
+                    <br />
+                    <br />
+                    <div style="text-align: center"><button id="clearButton">Clear Selections</button></div>
+                    <br /><br />
+                    <div id="blockageContainer" style="margin: 0 auto; display: table;">
+                        <h3 style="text-align:center; margin-bottom:0.5em;">Blocked By</h3>
+                        <div id="blockages"></div>
+                        <p>Add note to this link: <input type="text" id="linkCustomNote" /></p>
+                    </div>
+
+                    <div id="resetButtons">
+                        <button id="resetHub" style="float:left">Reset Hub</button>
+                        <button id="resetAll" style="float:right; background-color:indianred">Reset All</button>
+                    </div>
+                    <div id="notesContainer">
+                        <textarea id="customNotes"></textarea>
+                    </div>
                 </div>
             </div>
+            <div id="gridContainer"></div>
         </div>
-        <div id="gridContainer"></div>
-
         <div id="regionSelect" style="padding-left: 20px">
             <button id="hoennSelect">Emerald</button>
             <button id="sinnohSelect">Platinum</button>
