WIP Black/White 2 support

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
             <button id="hoennSelect">Emerald</button>
             <button id="sinnohSelect">Platinum</button>
             <button id="johtoSelect">HG/SS</button>
+            <button id="unovaSelect">BW2</button>
             <br />
             Force file load: <input type="checkbox" id="forceFileLoad" />
         </div>
