Add creator-specific white 2 schemes

--- a/index.html
+++ b/index.html
@@ -67,7 +67,10 @@
                     <input type="radio" name="worldOption" value="hgss"/><label>HeartGold / SoulSilver</label><br />
                     <input type="radio" name="worldOption" value="bw2"/><label>White 2</label><br />
                     <div id="unovaSettings" hidden>
-                        
+                        <br />
+                        Which randomizer:<br />
+                         <input type="radio" name="bw2creator" value="adrienn" checked/><label><a href="https://github.com/adrienntindall/hgss-map-randomizer">Adrienn</a></label><br />
+                         <input type="radio" name="bw2creator" value="pointcrow" /><label><a href="https://discord.gg/pointcrow">PointCrow</a></label>
                     </div>
                 </div>
                 <br />
