Add winter-exclusive warps

--- a/index.html
+++ b/index.html
@@ -73,6 +73,12 @@
                         Which randomizer:<br />
                          <input type="radio" name="bw2creator" value="adrienn" checked/><label>Adrienn</label><br />
                          <input type="radio" name="bw2creator" value="pointcrow" /><label>PointCrow</label>
+                        <br /><br />
+                        What season:<br />
+                         <input type="radio" name="season" value="spring" checked/><label>Spring</label><br />
+                         <input type="radio" name="season" value="summer" /><label>Summer</label><br />
+                         <input type="radio" name="season" value="autumn" /><label>Autumn</label><br />
+                         <input type="radio" name="season" value="winter" /><label>Winter</label><br />
                     </div>
                 </div>
                 <br />
